// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField rendering renders AutoComplete 1`] = `
<FormGroup
  fieldId={null}
  isRequired={false}
  label=""
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      formAutocompleteDataProps={
        Object {
          "controller": "bookmarks",
          "disabled": false,
          "id": "form-search",
          "name": "Filter[search]",
          "searchQuery": "",
          "url": "bookmarks/auto_complete",
          "useKeyShortcuts": false,
        }
      }
      id={null}
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="autocomplete"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders Date input 1`] = `
<FormGroup
  fieldId={null}
  isRequired={false}
  label=""
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id={null}
      name="a"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="date"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders DateTime complex options and error 1`] = `
<FormGroup
  fieldId="date-time"
  isRequired={false}
  label="DateTime with error"
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id="date-time"
      name="group[datetime]"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="dateTime"
      validated="error"
      value={1991-01-01T01:12:01.000Z}
    />
  </div>
  <InlineMessage
    error="can not be in the past"
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders DateTime input 1`] = `
<FormGroup
  fieldId={null}
  isRequired={false}
  label=""
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id={null}
      name="a"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="dateTime"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders Time input 1`] = `
<FormGroup
  fieldId={null}
  isRequired={false}
  label=""
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id={null}
      name="a"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="time"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders text complex options and help 1`] = `
<FormGroup
  fieldId="text-field"
  isRequired={false}
  label="textField"
  labelIcon={
    <Popover
      bodyContent={
        <React.Fragment>
          This is more helpful text
        </React.Fragment>
      }
    >
      <Button
        className="field-help"
        onClick={[Function]}
        type="button"
        variant="plain"
      >
        <Icon
          isInline={true}
        >
          <HelpIcon />
        </Icon>
      </Button>
    </Popover>
  }
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id="text-field"
      name="group[textfield]"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="text"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;

exports[`FormField rendering renders text input 1`] = `
<FormGroup
  fieldId={null}
  isRequired={false}
  label=""
>
  <div
    className="col-md-4"
  >
    <InputFactory
      className=""
      disabled={false}
      id={null}
      name="a"
      onChange={[Function]}
      required={false}
      setError={[Function]}
      setWarning={[Function]}
      type="text"
    />
  </div>
  <InlineMessage
    error={null}
    helpInline={null}
    warning={null}
  />
</FormGroup>
`;
